# MyMusic

./: .editorconfig  CONVENTIONS.md  README.md  README_zh.md  index.html  mobile.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
docs/: CONVENTIONS.md  CONVENTIONS_zh.md
src/: App.tsx  ThemeProvider.tsx  config.ts  index.css  main.tsx
src-tauri/: Cargo.toml  cargo_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: request_api.json
src-tauri/src/: config.rs  error.rs  http.rs  macros.rs  main.rs  proxy.rs  query.rs  stream.rs
src-tauri/src/api/: base.rs  mod.rs  models.rs
src-tauri/src/api/local/: mod.rs
src-tauri/src/api/netease/: artist.rs  comment.rs  crypto.rs  discover.rs  dto.rs  login.rs  mapper.rs  mod.rs  playlist.rs  search.rs  song.rs  user.rs
src-tauri/src/api/qishui/: album.rs  artist.rs  lyric.rs  mapper.rs  mod.rs  resolve.rs  track.rs
src-tauri/src/api/qq/: album.rs  artist.rs  comment.rs  login.rs  lyric.rs  mapper.rs  mod.rs  playlist.rs  search.rs  song.rs
src-tauri/src/api/qqmusic/: album.rs  artist.rs  lyric.rs  mod.rs  playlist.rs  search.rs  song.rs
src/components/: AlbumCard.tsx  AudioEngine.tsx  AuthModal.tsx  CreatePlaylistModal.tsx  Dropdown.tsx  GenreCard.tsx  Modal.tsx  PlatformBadge.tsx  PlaylistCard.tsx  SongList.tsx  SongRow.tsx  VipBadge.tsx  index.ts
src/data/: initialPlayerData.ts  mockData.ts
src/hooks/: useAlbumActions.ts  useAudioPlayer.ts  useAudioSync.ts  (+16 more)
(+185 files in other folders)
