[package]
name = "music-app"
version = "0.0.0"
description = "A Vibe Coding Music App"
authors = ["Vibe Coding"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "window-all", "http-request", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
